Esturctura HTML terminada, reset incorporado y Sass iniciado

--- a/index.html
+++ b/index.html
@@ -10,17 +10,123 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Roboto:ital,wght@0,300;1,300&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">    
     <link rel="stylesheet" href="assets/css/main.css">
     <title>Gigeo App</title>
 </head>
 <body>
-    
 
+    <nav class="nav">
+        <h2 class="logo">GIGEO</h2><sup>ART</sup>
+        <ul class="nav__menu">
+            <li><i class="fas fa-search"></i></li>
+            <li><i class="fas fa-video"></i></li>
+            <li><i class="fas fa-plus"></i></li>
+            <li><i class="fas fa-bell"></i></li>
+            <li><i class="fas fa-bars"></i></li>
+        </ul>
+    </nav>
 
+    <header class="principal">
+        <img class="principal__image" src="assets/img/image-banner.png" alt="">
+    </header>
 
+    <section>
+        <div>
+           <img class="" src="assets/img/profile-image.png" alt="">
+        </div>
+        <div>
+            <h2 class="">Yuki Mukami</h2>
+            <p class="">30.000 segudores</p>
+        </div>
+        <div>
+            <button class="">Mensaje</button>
+            <button class="">Seguir</button>
+        </div>
+    </section>
 
+    <main>
+        <div class="container">
+            <div class="row">
+                <h1 class="">Videos populares</h1>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3">
+                <div class="card">
+                    <img src="assets/img/image-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Después de la vela - Yuki
+                            Mukami</h5>
+                        <p class="card-text">16k vistas - 1 semana atrás</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3">
+                <div class="card">
+                    <img src="assets/img/image-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Far Away - Yuki Mukami</h5>
+                        <p class="card-text">100k vistas - 1 mes atrás</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3">
+                <div class="card">
+                    <img src="assets/img/image-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">City - Yuki Mukami</h5>
+                        <p class="card-text">20k vistas - 1 mes atrás</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3">
+                <div class="card">
+                    <img src="assets/img/image-4.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">A Yuki Tale - Yuki Mukami</h5>
+                        <p class="card-text">1m vistas - 1 año atrás</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3">
+                <div class="card">
+                    <img src="assets/img/image-5.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Después de la vela - Yuki
+                            Mukami</h5>
+                        <p class="card-text">16k vistas - 1 semana atrás</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3">
+                <div class="card">
+                    <img src="assets/img/image-6.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Far Away - Yuki Mukami</h5>
+                        <p class="card-text">100k vistas - 1 mes atrás</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3">
+                <div class="card">
+                    <img src="assets/img/image-7.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">City - Yuki Mukami</h5>
+                        <p class="card-text">20k vistas - 1 mes atrás</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3">
+                <div class="card">
+                    <img src="assets/img/image-8.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">A Yuki Tale - Yuki Mukami</h5>
+                        <p class="card-text">1m vistas - 1 año atrás</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
-
-    
 </body>
+
 </html>
