--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 </head>
 <body>
 
-    <nav class="nav">
-        <h2 class="logo">GIGEO</h2><sup>ART</sup>
-        <ul class="nav__menu">
-            <li><i class="fas fa-search"></i></li>
-            <li><i class="fas fa-video"></i></li>
-            <li><i class="fas fa-plus"></i></li>
-            <li><i class="fas fa-bell"></i></li>
-            <li><i class="fas fa-bars"></i></li>
+    <nav class="nav navbar-expand-lg">
+        <h2 class="nav__logo">GIGEO</h2><sup>ART</sup>
+        <ul class="nav__menu collapse navbar-collapse justify-content-end">
+            <li class="nav__links"><i class="fas fa-search"></i></li>
+            <li class="nav__links"><i class="fas fa-video"></i></li>
+            <li class="nav__links"><i class="fas fa-plus"></i></li>
+            <li class="nav__links"><i class="fas fa-bell"></i></li>
+            <li class="nav__links"><i class="fas fa-bars"></i></li>
         </ul>
     </nav>
 
@@ -31,101 +31,97 @@
         <img class="principal__image" src="assets/img/image-banner.png" alt="">
     </header>
 
-    <section>
-        <div>
-           <img class="" src="assets/img/profile-image.png" alt="">
+    <section class="row pt-3">
+        <div class="col-12 col-lg-1 col-md-2 col-sm-4">
+           <img class="present__img" src="assets/img/profile-image.png" alt="">
         </div>
-        <div>
-            <h2 class="">Yuki Mukami</h2>
-            <p class="">30.000 segudores</p>
+        <div class="col-12 col-lg-2 col-md-4 col-sm-4 pt-4">
+            <h2 class="present__art ">Yuki Mukami</h2>
+            <p class="present__art">30.000 segudores</p>
         </div>
-        <div>
-            <button class="">Mensaje</button>
-            <button class="">Seguir</button>
+        <div class="present__button col-12 col-lg-9 col-md-6 col-sm-4 pt-4">
+            <button class="present__button1">Mensaje</button>
+            <button class="present__button2">Seguir</button>
         </div>
     </section>
 
-    <main>
-        <div class="container">
-            <div class="row">
-                <h1 class="">Videos populares</h1>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3">
-                <div class="card">
-                    <img src="assets/img/image-1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Después de la vela - Yuki
-                            Mukami</h5>
-                        <p class="card-text">16k vistas - 1 semana atrás</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3">
-                <div class="card">
-                    <img src="assets/img/image-2.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Far Away - Yuki Mukami</h5>
-                        <p class="card-text">100k vistas - 1 mes atrás</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3">
-                <div class="card">
-                    <img src="assets/img/image-3.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">City - Yuki Mukami</h5>
-                        <p class="card-text">20k vistas - 1 mes atrás</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3">
-                <div class="card">
-                    <img src="assets/img/image-4.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">A Yuki Tale - Yuki Mukami</h5>
-                        <p class="card-text">1m vistas - 1 año atrás</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3">
-                <div class="card">
-                    <img src="assets/img/image-5.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Después de la vela - Yuki
-                            Mukami</h5>
-                        <p class="card-text">16k vistas - 1 semana atrás</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3">
-                <div class="card">
-                    <img src="assets/img/image-6.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Far Away - Yuki Mukami</h5>
-                        <p class="card-text">100k vistas - 1 mes atrás</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3">
-                <div class="card">
-                    <img src="assets/img/image-7.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">City - Yuki Mukami</h5>
-                        <p class="card-text">20k vistas - 1 mes atrás</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3">
-                <div class="card">
-                    <img src="assets/img/image-8.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">A Yuki Tale - Yuki Mukami</h5>
-                        <p class="card-text">1m vistas - 1 año atrás</p>
-                    </div>
+    <section class="row">
+        <h1 class="title__principal">Videos populares</h1>
+        <div class="col-12 col-md-4 col-lg-3">
+            <div class="card">
+                <img src="assets/img/image-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Después de la vela - Yuki
+                        Mukami</h5>
+                    <p class="card-text">16k vistas - 1 semana atrás</p>
                 </div>
             </div>
         </div>
-    </main>
+        <div class="col-12 col-md-4 col-lg-3">
+            <div class="card">
+                <img src="assets/img/image-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Far Away - Yuki Mukami</h5>
+                    <p class="card-text">100k vistas - 1 mes atrás</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+            <div class="card">
+                <img src="assets/img/image-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">City - Yuki Mukami</h5>
+                    <p class="card-text">20k vistas - 1 mes atrás</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+            <div class="card">
+                <img src="assets/img/image-4.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">A Yuki Tale - Yuki Mukami</h5>
+                    <p class="card-text">1m vistas - 1 año atrás</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+            <div class="card">
+                <img src="assets/img/image-5.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Después de la vela - Yuki
+                        Mukami</h5>
+                    <p class="card-text">16k vistas - 1 semana atrás</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+            <div class="card">
+                <img src="assets/img/image-6.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Far Away - Yuki Mukami</h5>
+                    <p class="card-text">100k vistas - 1 mes atrás</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+            <div class="card">
+                <img src="assets/img/image-7.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">City - Yuki Mukami</h5>
+                    <p class="card-text">20k vistas - 1 mes atrás</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+            <div class="card">
+                <img src="assets/img/image-8.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">A Yuki Tale - Yuki Mukami</h5>
+                    <p class="card-text">1m vistas - 1 año atrás</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
